2014-11-13  Joseph Myers  <joseph@codesourcery.com>

	[BZ #17594]
	* stdlib/strtol.c (SYM__): New macro.
	(SYM__1): Likewise.
	(__strtol): Likewise.
	(strtol): Rename to __strtol and define as weak alias of
	__strtol.  Use libc_hidden_weak.

2014-11-13  Stefan Liebler  <stli@linux.vnet.ibm.com>

	* sysdeps/s390/s390-32/dl-machine.h (RTLD_START):
	Use numbered labels in inline assembly.

2014-11-13  Stefan Liebler  <stli@linux.vnet.ibm.com>

	* sysdeps/s390/s390-32/setjmp.S (__sigsetjmp):
	Add setjmp LIBC_PROBE.
	* sysdeps/s390/s390-64/setjmp.S (__sigsetjmp):
	Likewise.
	* sysdeps/s390/s390-32/__longjmp.c (__longjmp):
	Add longjmp, longjmp_target LIBC_PROBE.
	* sysdeps/s390/s390-64/__longjmp.c (__longjmp):
	Likewise.

2014-11-13  Stefan Liebler  <stli@linux.vnet.ibm.com>

	* sysdeps/s390/s390-64/dl-machine.h (elf_machine_rela):
	Gate the definition of refsym additionally with !RTLD_BOOTSTRAP
	to get rid of unused variable warning.

2014-11-13  Stefan Liebler  <stli@linux.vnet.ibm.com>

	* sysdeps/s390/s390-32/backtrace.c (__backtrace):
	Check for unwind_backtrace ==  NULL only in SHARED case.
	(__backchain_backtrace): Compile only in SHARED case.
	* sysdeps/s390/s390-64/backtrace.c (__backtrace):
	Likewise.
	(__backchain_backtrace): Declare as static.

2014-11-12  Roland McGrath  <roland@hack.frob.com>

	* nptl/createthread.c [!TLS_MULTIPLE_THREADS_IN_TCB]
	(__libc_multiple_threads_ptr): Variable moved ...
	* nptl/nptl-init.c [!TLS_MULTIPLE_THREADS_IN_TCB]: ... here.

2014-11-12  Joseph Myers  <joseph@codesourcery.com>

	* conform/GlibcConform.pm: New file.
	* conform/conformtest.pl: Use GlibcConform module.
	* conform/linknamespace.pl: New file.
	* conform/list-header-symbols.pl: Likewise.
	* conform/Makefile (linknamespace-symlists-base): New variable.
	(linknamespace-symlists-tests): Likewise.
	(linknamespace-header-base): Likewise.
	(linknamespace-header-tests): Likewise.
	(tests-special): Add new tests.
	($(linknamespace-symlists-tests)): New rule.